# detector

./: README.md  pyproject.toml
src/: main.py
