[tool.poetry]
name = "detector"
version = "0.1.0"
description = ""
authors = ["Florian Heuer <florian.heuer89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
pandas = "^1.4.4"
requests = "^2.28.1"
torchvision = "^0.13.1"
PyYAML = "^6.0"
tqdm = "^4.64.1"
seaborn = "^0.12.0"
opencv-python = "^4.6"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
